opam-version: "2.0"
name: "vyconf"
version: "0.1"
maintainer: "Daniil Baturin <daniil@baturin.org>"
authors: "VyOS maintainers and contributors <maintainers@vyos.net>"
homepage: "https://github.com/vyos/vyconf"
bug-reports: "https://phabricator.vyos.net"
license: "LGPL with OCaml linking exception"
description: "An appliance configuration framework"
dev-repo: "git+https://github.com/vyos/vyconf/"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name]
]
depends: [
  "menhir" {build}
  "dune" {build & >= "1.4.0"}
  "ocaml-protoc" {build}
  "ounit" {build}
  "lwt" {build & >= "4.1.0"}
  "lwt_ppx" {build}
  "lwt_log" {build}
  "fileutils" {build}
  "ppx_deriving" {build}
  "ppx_deriving_yojson" {build}
  "ocplib-endian" {build}
  "xml-light" {build}
  "toml" {build}
  "sha" {build}
  "pcre" {build}
]
available: ocaml-version >= "4.14.2"
