opam-version: "2.0"
name: "vyconf"
version: "0.1"
synopsis: "VyOS 2.x config file control library"
description: "An appliance configuration framework"
maintainer: "Daniil Baturin <daniil@baturin.org>"
authors: "VyOS maintainers and contributors <maintainers@vyos.net>"
homepage: "https://github.com/vyos/vyconf"
bug-reports: "https://phabricator.vyos.net"
license: "LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception"
dev-repo: "git+https://github.com/vyos/vyconf/"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name]
]
depends: [
  "menhir" {build}
  "dune" {build & >= "1.4.0"}
  "ocaml-protoc" {build}
  "ounit2" {build}
  "lwt" {build & >= "4.1.0"}
  "lwt_ppx" {build}
  "lwt_log" {build}
  "fileutils" {build}
  "ppx_deriving" {build}
  "ppx_deriving_yojson" {build}
  "ocplib-endian" {build}
  "xml-light" {build}
  "toml" {build}
  "sha" {build}
  "pcre" {build}
  "toml" {build}
]
