(library
 (name vyconf_connect)
 (public_name vyconf.vyconf-connect)
 (modules vyconf_pbt message)
 (libraries lwt lwt.unix lwt_log lwt_ppx ocaml-protoc fileutils ppx_deriving_yojson)
 (preprocess (pps lwt_ppx ppx_deriving_yojson)))

(library
 (name vyconfd_config)
 (modules vyconf_config session directories defaults)
 (libraries vyos1x-config vyconf_connect toml sha ppx_deriving.show)
 (preprocess (pps ppx_deriving.show ppx_deriving_yojson)))

(library
 (name client)
 (public_name vyconf.vyconf-client)
 (modules vyconf_client)
 (libraries vyos1x-config vyconf_connect lwt lwt.unix lwt_log lwt_ppx ocaml-protoc toml sha
            yojson ppx_deriving.show ppx_deriving_yojson)
 (preprocess (pps lwt_ppx ppx_deriving.show ppx_deriving_yojson)))

(executable
 (name vyconfd)
 (public_name vyconfd)
 (modules vyconfd startup version util)
 (libraries vyos1x-config vyconfd_config vyconf_connect)
 (preprocess (pps lwt_ppx)))

(executable
 (name vycli)
 (public_name vycli)
 (modules vycli)
 (libraries client)
 (preprocess (pps lwt_ppx)))

(rule
 (alias protoc)
 (mode promote)
 (targets vyconf_pbt.ml vyconf_pbt.mli)
 (action
  (chdir
   %{project_root}
   (progn
    (run ocaml-protoc --ml_out src data/vyconf.proto)
    (run mv src/vyconf.ml src/vyconf_pbt.ml)
    (run mv src/vyconf.mli src/vyconf_pbt.mli)))))
