(include_subdirs unqualified)

(library
 (name vyconf_connect)
 (public_name vyconf.vyconf-connect)
 (modules vyconf_pbt message)
 (libraries lwt lwt.unix lwt_log lwt_ppx ocaml-protoc fileutils ppx_deriving_yojson)
 (preprocess (pps lwt_ppx ppx_deriving_yojson)))

(library
 (name vyconfd_config)
 (public_name vyconf.vyconfd-config)
 (modules vyconf_config startup session directories defaults commit)
 (libraries vyos1x-config vyconf_connect toml sha ppx_deriving.show)
 (preprocess (pps lwt_ppx ppx_deriving.show ppx_deriving_yojson)))

(library
 (name client)
 (public_name vyconf.vyconf-client)
 (modules vyconf_client vyconf_client_session)
 (libraries vyos1x-config vyconf_connect lwt lwt.unix lwt_log lwt_ppx ocaml-protoc toml sha
            yojson ppx_deriving.show ppx_deriving_yojson)
 (preprocess (pps lwt_ppx ppx_deriving.show ppx_deriving_yojson)))

(library
 (name vycall_message)
 (public_name vyconf.vycall-message)
 (modules vycall_pbt)
 (libraries ocaml-protoc))

(library
 (name commitd_client)
 (public_name vyconf.vycall-client)
 (modules vycall_client)
 (libraries vyos1x-config vyconfd_config vycall_message lwt lwt.unix lwt_log lwt_ppx ocplib-endian)
 (preprocess (pps lwt_ppx)))

(executable
 (name vyconfd)
 (public_name vyconfd)
 (modules vyconfd version)
 (libraries vyos1x-config vyconfd_config vyconf_connect)
 (preprocess (pps lwt_ppx)))

(executable
 (name vycli)
 (public_name vycli)
 (modules vycli)
 (libraries client)
 (preprocess (pps lwt_ppx)))

(executable
 (name validate)
 (public_name validate)
 (modules validate)
 (libraries client))

(executable
 (name test_commit_data)
 (public_name test-commit-data)
 (modules test_commit_data)
 (libraries vyos1x-config vyconfd_config)
 (preprocess (pps lwt_ppx)))

(rule
 (mode promote)
 (targets vyconf_pbt.ml vyconf_pbt.mli)
 (action
  (chdir
   %{project_root}
   (progn
    (run ocaml-protoc --ml_out src data/vyconf.proto)
    (run mv src/vyconf.ml src/vyconf_pbt.ml)
    (run mv src/vyconf.mli src/vyconf_pbt.mli)))))

(rule
 (mode promote)
 (targets vycall_pbt.ml vycall_pbt.mli)
 (action
  (chdir
   %{project_root}
   (progn
    (run ocaml-protoc --ml_out src data/vycall.proto)
    (run mv src/vycall.ml src/vycall_pbt.ml)
    (run mv src/vycall.mli src/vycall_pbt.mli)))))

(library
 (name vyos1x_adapter)
 (public_name vyconf.vyos1x-adapter)
 (libraries vyos1x-config vyconf.vyconf-client ctypes ctypes-foreign lwt lwt.unix lwt_log lwt_ppx)
 (modules vyos1x_adapter)
 (preprocess (pps lwt_ppx ppx_deriving_yojson)))

(executable
 (name vy_set)
 (public_name vy_set)
 (libraries vyos1x_adapter vyconf.vyconf-client)
 (modules vy_set))

(executable
 (name vy_delete)
 (public_name vy_delete)
 (libraries vyos1x_adapter vyconf.vyconf-client)
 (modules vy_delete))

(executable
 (name vy_load_config)
 (public_name vy_load_config)
 (libraries vyos1x_adapter vyos1x-config)
 (modules vy_load_config))
